docs/sdk/v0.47/build/modules.mdx
---
title: "Module Summary"
description: "Version: v0.47"
---

Here are some production-grade modules that can be used in Cosmos SDK applications, along with their respective documentation:

* [Auth](/docs/sdk/v0.47/build/modules/auth/auth) - Authentication of accounts and transactions for Cosmos SDK applications.
* [Authz](/docs/sdk/v0.47/build/modules/authz/README) - Authorization for accounts to perform actions on behalf of other accounts.
* [Bank](/docs/sdk/v0.47/build/modules/bank/README) - Token transfer functionalities.
* [Crisis](/docs/sdk/v0.47/build/modules/crisis/README) - Halting the blockchain under certain circumstances (e.g. if an invariant is broken).
* [Distribution](/docs/sdk/v0.47/build/modules/distribution/README) - Fee distribution, and staking token provision distribution.
* [Evidence](/docs/sdk/v0.47/build/modules/evidence/README) - Evidence handling for double signing, misbehaviour, etc.
* [Feegrant](/docs/sdk/v0.47/build/modules/feegrant/README) - Grant fee allowances for executing transactions.
* [Governance](/docs/sdk/v0.47/build/modules/gov/README) - On-chain proposals and voting.
* [Mint](/docs/sdk/v0.47/build/modules/mint/README) - Creation of new units of staking token.
* [Params](/docs/sdk/v0.47/build/modules/params/README) - Globally available parameter store.
* [Slashing](/docs/sdk/v0.47/build/modules/slashing/README) - Validator punishment mechanisms.
* [Staking](/docs/sdk/v0.47/build/modules/staking/README) - Proof-of-Stake layer for public blockchains.
* [Upgrade](/docs/sdk/v0.47/build/modules/upgrade/README) - Software upgrades handling and coordination.
* [NFT](/docs/sdk/v0.47/build/modules/nft/README) - NFT module implemented based on [ADR43](https://docs.cosmos.network/main/architecture/adr-043-nft-module.html).
* [Consensus](/docs/sdk/v0.47/build/modules/consensus/README) - Consensus module for modifying CometBFT's ABCI consensus params.
* [Circuit](/docs/sdk/v0.47/build/modules/circuit/README) - Circuit breaker module for pausing messages.
* [Genutil](/docs/sdk/v0.47/build/modules/genutil/README) - Genesis utilities for the Cosmos SDK.

To learn more about the process of building modules, visit the [building modules reference documentation](https://docs.cosmos.network/main/building-modules/intro).

## IBC[​](#ibc "Direct link to IBC")

The IBC module for the SDK is maintained by the IBC Go team in its [own repository](https://github.com/cosmos/ibc-go).

Additionally, the [capability module](https://github.com/cosmos/ibc-go/tree/fdd664698d79864f1e00e147f9879e58497b5ef1/modules/capability) is from v0.48+ maintained by the IBC Go team in its [own repository](https://github.com/cosmos/ibc-go/tree/fdd664698d79864f1e00e147f9879e58497b5ef1/modules/capability).

## CosmWasm[​](#cosmwasm "Direct link to CosmWasm")

The CosmWasm module enables smart contracts, learn more by going to their [documentation site](https://book.cosmwasm.com/), or visit [the repository](https://github.com/CosmWasm/cosmwasm).

## EVM[​](#evm "Direct link to EVM")

Read more about writing smart contracts with solidity at the official [`evm` documentation page](https://docs.evmos.org/protocol/modules/evm).
